Complex Solidify Crash with Singularity on Rim #80893

Closed
opened 2020-09-17 16:58:34 +02:00 by Henrik D. · 7 comments
Member

System Information
Operating system: Linux-5.8.0-1-amd64-x86_64-with-debian-bullseye-sid 64 Bits
Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 450.66

Blender Version
Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-09-16 22:51, hash: f94a49fbad
Worked: never (yes I am sure)

Short description of error
If a singularity has connected rim faces, one of them generates only three vertices, leaving blender in a bad state. If you further go ahead and use blender it will crash at some point with a segmentation fault.

Exact steps for others to reproduce the error
Load the blend file. It will probably not crash immediatly even though the error is already there, so just edit the mesh or change the thickness until it crashes.
SolidifySingularityCrash.blend

**System Information** Operating system: Linux-5.8.0-1-amd64-x86_64-with-debian-bullseye-sid 64 Bits Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 450.66 **Blender Version** Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-09-16 22:51, hash: `f94a49fbad` Worked: never (yes I am sure) **Short description of error** If a singularity has connected rim faces, one of them generates only three vertices, leaving blender in a bad state. If you further go ahead and use blender it will crash at some point with a segmentation fault. **Exact steps for others to reproduce the error** Load the blend file. It will probably not crash immediatly even though the error is already there, so just edit the mesh or change the thickness until it crashes. [SolidifySingularityCrash.blend](https://archive.blender.org/developer/F8892391/SolidifySingularityCrash.blend)
Author
Member

Added subscriber: @HDMaster84

Added subscriber: @HDMaster84
Henrik D. self-assigned this 2020-09-17 18:03:01 +02:00
Author
Member

this has a very simple fix

this has a very simple fix

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

When testing, I came across this assert:

BLI_assert failed: ...\source\blender\modifiers\intern\MOD_solidify_nonmanifold.c:2441, MOD_solidify_nonmanifold_modifyMesh(), at 'loop_index == numNewLoops'
When testing, I came across this assert: ``` BLI_assert failed: ...\source\blender\modifiers\intern\MOD_solidify_nonmanifold.c:2441, MOD_solidify_nonmanifold_modifyMesh(), at 'loop_index == numNewLoops' ```

This issue was referenced by a9dc3fbef8

This issue was referenced by a9dc3fbef898720d564afaa57deedb483bb75ba8

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#80893
No description provided.