Fix T80893: Complex solidify special case with singularity

Ref D8929